First Upload of Bootstrap-powered one-page website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
-Hello World
+<!DOCTYPE html>
+<!--
+	Copyright 2016 Gamebattles Ltd
+
+	Licensed under the Apache License, Version 2.0 (the "License");
+	you may not use this file except in compliance with the License.
+	You may obtain a copy of the License at
+
+	    http://www.apache.org/licenses/LICENSE-2.0
+
+	Unless required by applicable law or agreed to in writing, software
+	distributed under the License is distributed on an "AS IS" BASIS,
+	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+	See the License for the specific language governing permissions and
+	limitations under the License.
+
+	Developed by John Prantalos [http://johnprantalos.gr]
+-->
+<html>
+<head>
+	<meta charset="utf-8" />
+	<title>Repos - Webhosting|4U</title>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-6696281-16', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
+
+	<!-- Vendor Stuff-->
+	<link rel="stylesheet" type="text/css" href="vendor/bootstrap-3.3.6-dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu:400,700&subset=latin,greek" />
+	<link rel="apple-touch-icon" sizes="57x57" href="vendor/favicon-generator/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="vendor/favicon-generator/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="vendor/favicon-generator/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="vendor/favicon-generator/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="vendor/favicon-generator/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="vendor/favicon-generator/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="vendor/favicon-generator/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="vendor/favicon-generator/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="vendor/favicon-generator/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="vendor/favicon-generator/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="vendor/favicon-generator/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="vendor/favicon-generator/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="vendor/favicon-generator/favicon-16x16.png">
+	<link rel="manifest" href="vendor/favicon-generator/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="vendor/favicon-generator/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+
+	<!-- Webhosting|4U Stuff -->
+	<link rel="stylesheet" type="text/css" href="css/theme.css" />
+</head>
+<body>
+
+	<div class="container">
+		<div class="row">			
+			<div class="col-xs-8 col-xs-offset-2">
+				<a href="http://webhosting4u.gr/"><img class="img-responsive" src="http://i.imgur.com/fCXfySc.png" alt="wh4u-logo" /></a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-10 col-xs-offset-1">
+				<div id="welcome-message">
+					<h1>Webhosting|4U Repos</h1>
+					<p>This is the root domain of our Organization on Github Pages.</p>
+					<p>You can find all of our Repos <a href="https://github.com/Webhosting4U">here</a>.</p>
+					<p>More about us and our services can be found on <a href="http://webhosting4u.gr">Webhosting|4U.gr</a>.</p>
+					<p>Everything here is licensed under an <a href="#" data-toggle="modal" data-target="#license">Apache 2.0 License</a>, unless stated otherwise.</p>
+					<p>For more information send us an email at <a href="mailto:support@webhosting4u.gr">support[at]webhosting4u.gr</a>.</p>
+					<p id="credits">- The Webhosting|4U Development Team</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- License -->
+	<div class="modal fade" id="license" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel">License</h4>
+	      </div>
+	      <div class="modal-body">
+	        <p>Copyright 2016 Gamebattles Ltd</p>
+	        <p>Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at <a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a></p>
+			<p>Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an <strong>"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND</strong>, either express or implied. See the License for the specific language governing permissions and limitations under the License.</p>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+	
+	<!-- Scripts -->
+	<script type="text/javascript" src="vendor/jquery-2.2.1/jquery.min.js"></script>
+	<script type="text/javascript" src="vendor/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+</body>
+</html>
